# MyProjects

Others/: 基于ADS1299的多模态生物电信号采集系统设计--四川生理科学杂志--改1.docx
Tools/Filter/: filter.c  filter.h
Tools/serial_communicator/: CMakeLists.txt  main.c  run.bat  serial_communicator.c  serial_communicator.h
